--- a/tipitaka/index.html
+++ b/tipitaka/index.html
@@ -5,31 +5,31 @@
 	<meta charset="utf-8">
 </head>
 <body>
-<img src="Tipitaka-jpeg-version.jpg">
+<img src=".\Tipitaka-jpeg-version.jpg">
 <br>
 
-<a href="ler suttas.txt" target="_blank">ler suttas.txt</a>
+<a href=".\ler suttas.txt" target="_blank">ler suttas.txt</a>
 <br>
-<a href="Sutta Pitaka\Anguttara Nikaya Introdução.txt" target="_blank">Sutta Pitaka\Anguttara Nikaya Introdução.txt</a>
+<a href=".\Sutta Pitaka\Anguttara Nikaya Introdução.txt" target="_blank">Sutta Pitaka\Anguttara Nikaya Introdução.txt</a>
 <br>
-<a href="Sutta Pitaka\anguttara.nikaya.pdf" target="_blank">Sutta Pitaka\anguttara.nikaya.pdf</a>
+<a href=".\Sutta Pitaka\anguttara.nikaya.pdf" target="_blank">Sutta Pitaka\anguttara.nikaya.pdf</a>
 <br>
-<a href="Sutta Pitaka\dhammapada.pdf" target="_blank">Sutta Pitaka\dhammapada.pdf</a>
+<a href=".\Sutta Pitaka\dhammapada.pdf" target="_blank">Sutta Pitaka\dhammapada.pdf</a>
 <br>
-<a href="Sutta Pitaka\digha.nikaya.pdf" target="_blank">Sutta Pitaka\digha.nikaya.pdf</a>
+<a href=".\Sutta Pitaka\digha.nikaya.pdf" target="_blank">Sutta Pitaka\digha.nikaya.pdf</a>
 <br>
-<a href="Sutta Pitaka\khuddaka.nikaya.pdf" target="_blank">Sutta Pitaka\khuddaka.nikaya.pdf</a>
+<a href=".\Sutta Pitaka\khuddaka.nikaya.pdf" target="_blank">Sutta Pitaka\khuddaka.nikaya.pdf</a>
 <br>
-<a href="Sutta Pitaka\Majjhima Nikaya Introdução.txt" target="_blank">Sutta Pitaka\Majjhima Nikaya Introdução.txt</a>
+<a href=".\Sutta Pitaka\Majjhima Nikaya Introdução.txt" target="_blank">Sutta Pitaka\Majjhima Nikaya Introdução.txt</a>
 <br>
-<a href="Sutta Pitaka\majjhima.nikaya.1.pdf" target="_blank">Sutta Pitaka\majjhima.nikaya.1.pdf</a>
+<a href=".\Sutta Pitaka\majjhima.nikaya.1.pdf" target="_blank">Sutta Pitaka\majjhima.nikaya.1.pdf</a>
 <br>
-<a href="Sutta Pitaka\majjhima.nikaya.2.pdf" target="_blank">Sutta Pitaka\majjhima.nikaya.2.pdf</a>
+<a href=".\Sutta Pitaka\majjhima.nikaya.2.pdf" target="_blank">Sutta Pitaka\majjhima.nikaya.2.pdf</a>
 <br>
-<a href="Sutta Pitaka\majjhima.nikaya.3.pdf" target="_blank">Sutta Pitaka\majjhima.nikaya.3.pdf</a>
+<a href=".\Sutta Pitaka\majjhima.nikaya.3.pdf" target="_blank">Sutta Pitaka\majjhima.nikaya.3.pdf</a>
 <br>
-<a href="Sutta Pitaka\Samyutta Nikaya Introdução.txt" target="_blank">Sutta Pitaka\Samyutta Nikaya Introdução.txt</a>
+<a href=".\Sutta Pitaka\Samyutta Nikaya Introdução.txt" target="_blank">Sutta Pitaka\Samyutta Nikaya Introdução.txt</a>
 <br>
-<a href="Sutta Pitaka\samyutta.nikaya.pdf" target="_blank">Sutta Pitaka\samyutta.nikaya.pdf</a>
+<a href=".\Sutta Pitaka\samyutta.nikaya.pdf" target="_blank">Sutta Pitaka\samyutta.nikaya.pdf</a>
 </body>
 </html>
